...
//                   Text(
//                     "Login to your account",
//                     style: GoogleFonts.poppins(fontSize: 22, fontWeight: FontWeight.bold, color: const Color(0xFF154314)),
//                   ),
//                   const SizedBox(height: 30),
//                   TextFormField(
//                     key: const Key('phone_email_field'),
//                     controller: _phoneEmailController,
//                     decoration: InputDecoration(
//                       prefixIcon: const Icon(Icons.person, color: Color(0xFF154314)),
//                       hintText: "Phone/ Email",
//                       hintStyle: GoogleFonts.poppins(fontSize: 14),
//                     ),
//                   ),
//                   const SizedBox(height: 20),
//                   TextFormField(
//                     key: const Key('password_field'),
//                     controller: _passwordController,
//                     obscureText: _obscurePassword,
//                     decoration: InputDecoration(
//                       prefixIcon: const Icon(Icons.lock, color: Color(0xFF154314)),
//                       hintText: "Password",
//                       hintStyle: GoogleFonts.poppins(fontSize: 14),
...
//                     ),
//                   ),
//                   const SizedBox(height: 10),
//                   Align(
//                     alignment: Alignment.centerRight,
//                     child: TextButton(
//                       key: const Key('forgot_password_button'),
//                       onPressed: _resetPassword,
//                       child: Text("Forgot Password?", style: GoogleFonts.poppins(color: Color(0xFF154314))),
//                     ),
//                   ),
//                   const SizedBox(height: 20),
//                   SizedBox(
//                     width: double.infinity,
//                     height: 50,
//                     child: ElevatedButton(
//                       key: const Key('login_button'),
//                       style: ElevatedButton.styleFrom(
//                         backgroundColor: const Color(0xFF154314),
//                         shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(8)),
//                       ),
//                       onPressed: _login,
//                       child: Text("Login", style: GoogleFonts.poppins(fontSize: 18, fontWeight: FontWeight.w600, color: Colors.white)),
//                     ),
//                   ),
//                   const SizedBox(height: 10),
//                   TextButton(
//                     key: const Key('go_back_button'),
//                     onPressed: () {
//                       Navigator.pushReplacement(
//                         context,
//                         MaterialPageRoute(builder: (context) => const authHome()),
//                       );
//                     },
...
