...
                                          'Ride completed',
                                          style: GoogleFonts.poppins(color: Colors.green, fontWeight: FontWeight.w600),
                                        ),
                                        const SizedBox(height: 10),
                                        ride['hasRated']
                                            ? Text(
                                          'Rating submitted',
                                          style: GoogleFonts.poppins(color: Colors.grey, fontWeight: FontWeight.w600),
                                        )
                                            : Column(
                                          crossAxisAlignment: CrossAxisAlignment.start,
                                          children: [
                                            ElevatedButton(
...
                                                ),
                                                padding: const EdgeInsets.symmetric(horizontal: 20, vertical: 10),
                                              ),
                                              child: Text(
                                                _expandedRatingRideIds.contains(ride['rideId'])
                                                    ? 'Hide Rating'
                                                    : 'Rate Driver',
                                                style: GoogleFonts.poppins(
                                                    fontSize: 14, fontWeight: FontWeight.w600, color: Colors.white),
                                              ),
                                            ),
                                            const SizedBox(height: 10),
                                            if (_expandedRatingRideIds.contains(ride['rideId']))
...
            style: GoogleFonts.poppins(fontSize: 12),
          ),
        ),
        const SizedBox(height: 4),
        ElevatedButton(
          onPressed: currentRating > 0 ? submitRating : null,
          child: Text("Submit", style: GoogleFonts.poppins(fontSize: 12)),
        )
      ],
    );
  }
}

